--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,10 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("OptimizationLib")
 
+
+
 # Add source to this project's executable.
 set(CMAKE_CXX_STANDARD 17)
-add_executable (OptimizationLib "main.cpp" "OptLib/TestMethods/testRegression.h" "OptLib/Functions/FuncParamInterface.h")
+add_executable (OptimizationLib "main.cpp")
 
 # TODO: Add tests and install targets if needed.
